Several basic data types available.
