# api/swagger/swagger.yaml
@@ -79,6 +79,27 @@ paths:
       responses:
         default:
           description: "successful logout"
+  /generate:
+    get:
+      summary: "Generating data by schema"
+      operationId: "generate"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "schema"
+        in: "body"
+        description: "Define schema of data"
+        required: true
+        schema:
+            $ref: "#/definitions/Schema"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items: 
+              type: "object"
+            
 definitions:
   User:
     type: "object"
@@ -101,3 +122,36 @@ definitions:
         type: "boolean"
     xml:
       name: "User"
+  DataType:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      type:
+        type: "string"
+      description:
+        type: "string"
+    xml:
+      name: "DataType"
+  Schema:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      name:
+        type: "string"
+      ownerId:
+        type: "string"
+      count:
+        type: "integer"
+      fileFormat:
+        type: "string"
+      fields:
+        type: "array"
+        items:
+          type: "object"
+          properties:
+            name:
+              type: "string"
+            dataTypeId:
+              type: "string"
